@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright 2009 Brian Pellin.
+ Copyright 2009-2011 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -17,89 +17,112 @@
   You should have received a copy of the GNU General Public License
   along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
   android:id="@+id/entry_table"
-  android:layout_height="fill_parent"
-  android:layout_width="wrap_content">	
+  android:layout_height="wrap_content"
+  android:layout_width="fill_parent"
+  android:orientation="vertical">	
 	<!-- Username -->
-	<TableRow>
-		<TextView android:id="@+id/entry_user_name_label"
-		  android:layout_width="100px"
-		  android:layout_height="wrap_content"
-		  android:text="@string/entry_user_name" />
-		<TextView android:id="@+id/entry_user_name" 
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"/>
-	</TableRow>
+	<TextView android:id="@+id/entry_user_name_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:text="@string/entry_user_name"
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<com.keepassdroid.view.TextViewSelect android:id="@+id/entry_user_name" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  style="@style/EntryItem"
+	/>
 	<!--  URL -->
-	<TableRow>
-		<TextView android:id="@+id/entry_url_label"
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"
-		  android:text="@string/entry_url" />
-		<TextView android:id="@+id/entry_url" 
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"/>
-	</TableRow>
+	<TextView android:id="@+id/entry_url_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:text="@string/entry_url" 
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<com.keepassdroid.view.TextViewSelect android:id="@+id/entry_url" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:autoLink="all"
+	  style="@style/EntryItem"
+	/>
 	<!-- Password -->
-	<TableRow>
-		<TextView android:id="@+id/entry_password_label"
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content" 
-		  android:text="@string/entry_password" />
-		<TextView android:id="@+id/entry_password" 
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"
-		  android:password="true"/>
-	</TableRow>
+	<TextView android:id="@+id/entry_password_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content" 
+	  android:text="@string/entry_password"
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<com.keepassdroid.view.TextViewSelect android:id="@+id/entry_password" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:password="true"
+	  style="@style/EntryItem"
+	/>
 	<!-- Created -->
-	<TableRow>
-		<TextView android:id="@+id/entry_created_label"
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content" 
-		  android:text="@string/entry_created" />
-		<TextView android:id="@+id/entry_created" 
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"/>
-	</TableRow>
+	<TextView android:id="@+id/entry_created_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content" 
+	  android:text="@string/entry_created"
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<TextView android:id="@+id/entry_created" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  style="@style/EntryItem"
+	/>
 	<!-- Modified -->
-	<TableRow>
-		<TextView android:id="@+id/entry_modified_label"
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content" 
-		  android:text="@string/entry_modified" />
-		<TextView android:id="@+id/entry_modified" 
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"/>
-	</TableRow>
+	<TextView android:id="@+id/entry_modified_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content" 
+	  android:text="@string/entry_modified"
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<TextView android:id="@+id/entry_modified" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  style="@style/EntryItem"
+	/>
 	<!-- Accessed -->
-	<TableRow>
-		<TextView android:id="@+id/entry_accessed_label"
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content" 
-		  android:text="@string/entry_accessed" />
-		<TextView android:id="@+id/entry_accessed" 
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"/>
-	</TableRow>
+	<TextView android:id="@+id/entry_accessed_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content" 
+	  android:text="@string/entry_accessed"
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<TextView android:id="@+id/entry_accessed" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  style="@style/EntryItem"
+	/>
 	<!-- Expires -->
-	<TableRow>
-		<TextView android:id="@+id/entry_expires_label"
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content" 
-		  android:text="@string/entry_expires" />
-		<TextView android:id="@+id/entry_expires" 
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"/>
-	</TableRow>
+	<TextView android:id="@+id/entry_expires_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content" 
+	  android:text="@string/entry_expires"
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<TextView android:id="@+id/entry_expires" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  style="@style/EntryItem"
+	/>
 	<!-- Comment -->
-	<TableRow>
-		<TextView android:id="@+id/entry_comment_label"
-		  android:layout_width="wrap_content"
-		  android:layout_height="wrap_content" 
-		  android:text="@string/entry_comment" />
-		<TextView android:id="@+id/entry_comment" 
-	      android:layout_width="wrap_content"
-		  android:layout_height="wrap_content"/>
-	</TableRow>
-</TableLayout>
+	<TextView android:id="@+id/entry_comment_label"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content" 
+	  android:text="@string/entry_comment"
+	  style="@style/WhiteOnDarkSmall"
+	/>
+	<com.keepassdroid.view.TextViewSelect android:id="@+id/entry_comment" 
+      android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  style="@style/EntryItem"
+	/>
+	<LinearLayout android:id="@+id/extra_strings"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:orientation="vertical">
+	</LinearLayout>
+</LinearLayout>
