@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009 Brian Pellin.
+ Copyright 2009-2011 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -18,6 +18,7 @@
   along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/parent"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
 	<!--  Title -->	
@@ -47,9 +48,12 @@
 	  android:layout_width="fill_parent"
 	  android:layout_height="fill_parent"
 	  android:layout_alignParentBottom="true"
-	  android:layout_below="@id/title_block">
-		<com.keepassdroid.view.EntryContentsView android:id="@+id/entry_table"
-		  android:layout_height="fill_parent"
-		  android:layout_width="wrap_content" />	
+	  android:layout_below="@id/title_block"
+	  android:fillViewport="true"
+	  android:scrollbarStyle="insideOverlay"
+	  android:padding="0sp">
+		<com.keepassdroid.view.EntryContentsView android:id="@+id/entry_contents"
+		  android:layout_height="wrap_content"
+		  android:layout_width="fill_parent" />	
 	</ScrollView>
 </RelativeLayout>
