@@ -1,3 +1,6 @@
+ * New entry view design
+ * Show custom strings in .kdbx databases
+
 KeePassdroid (1.8.6.4)
   * Update Chinese translations
   
